@@ -1,13 +1,0 @@
-[program:bamboo]
-command=%(ENV_SERVICE_BAMBOO_CMD)s
-user=root
-autostart=true
-autorestart=unexpected
-startsecs=5
-startretries=10
-priority=200
-stopsignal=TERM
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/fd/2
-stderr_logfile_maxbytes=0
