@@ -1,10 +1,12 @@
-[program:logrotate]
-command=%(ENV_SERVICE_LOGROTATE_CMD)s
+[program:bamboo]
+command=%(ENV_SERVICE_BAMBOO_CMD)s
 user=root
 autostart=true
 autorestart=unexpected
-startsecs=1
-priority=990
+startsecs=2
+startretries=10
+priority=200
+stopsignal=TERM
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
