@@ -1,3 +1,7 @@
+2016-01-22 - 1.2.0:
+ - Use new Ubuntu base image.
+ - Consul template and envconsul support added
+
 2016-01-04 - 1.1.1:
  - Bump to HAproxy 1.6.3-1ppa1~trusty
 
